--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1"
+  },
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
