--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "env-cmd": "^10.1.0",
+    "firebase": "^7.21.0",
+    "firebase-admin": "^9.2.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -18,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "env-cmd -f .env.staging react-scripts build",
+    "build": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
