--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "env-cmd": "^10.1.0",
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
+    "js-cookie": "^2.2.1",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
