--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,17 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@cypress/webpack-preprocessor": "^5.4.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "cypress": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "env-cmd -f .env react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "cypress": "cypress open"
   },
   "author": "",
   "license": "ISC",
