--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["@babel/env", "@babel/react", "module:@babel/plugin-proposal-optional-chaining"],
-  "plugins": ["@babel/transform-runtime"]
+  "presets": ["@babel/env", "@babel/preset-react"]
 }
+
+// "module:@babel/plugin-proposal-optional-chaining"
+// "@babel/plugin-proposal-optional-chaining"
