--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,12 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "cypress": "^5.2.0"
+    "chai-enzyme": "^1.0.0-beta.1",
+    "cypress": "^5.2.0",
+    "cypress-react-unit-test": "^4.14.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "jsdom": "^16.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
